# Deeplearning_project-CSRC_Rag

./: .gitignore  AI_CONTRIBUTION_REPORT.md  DEFENSE_CHECKLIST.md  DEFENSE_PREPARATION_COMPLETE.md  FINAL_SUMMARY.txt  PROJECT_COMPLETION_SUMMARY.md  README.md  SESSION_COMPLETION_REPORT.md  START_HERE.md  pyproject.toml  requirements.txt  start.bat
configs/: experiments.json  intent_examples.json  intent_examples_v2.json  intents.json  knowledge_base.json  models.json  models.recommended.json  qlora_config.json  retrieval.json  synonyms.json  synonyms_stats.md
docs/: ADVISOR_BRIEFING.md  FINAL_STATUS_REPORT.md  FUTURE_WORK_ROADMAP.md  INDEX_答辩相关文档.md  PROJECT_STATUS.md  ai_contribution_statement.md  defense_talk.md  evaluation_metrics.md  future_work.md  model_selection.md  paper_outline.md  前端测试问题.md  完整方案-总纲.md  微调方案.md  执行路线与验证计划.md  本地模型接入与前端改版说明.md  检索策略与知识库设计.md  答辩要点.md  项目总体框架.md
notebooks/: qwen_1_5b_qlora_colab.ipynb  qwen_qlora_colab.ipynb
prompts/: README.md  loader.py
scripts/: build_corpora.py  build_dense_index.py  build_dense_index_bge.py  build_event_chunks.py  build_extra_figures.py  build_gold_extra.py  build_intent_train_v2.py  build_m5_report.py  build_paper_docx.py  build_paper_figures.py  build_rag_qa_train.py  build_showcase_data.py  build_trend_gold_extra.py  collect_m2_retrieval_cases.py  evaluate_all_models.py  evaluate_end_to_end.py  evaluate_finetune_metrics.py  evaluate_generation.py  evaluate_generation_m4_4.py  evaluate_generation_raw.py  evaluate_retrieval_m2.py  evaluate_retrieval_sanity.py  evaluate_trend_aggregator.py  (+18 more)
(+172 files in other folders)
