[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csrc-rag-project"
version = "0.1.0"
description = "CSRC punishment case RAG project scaffold"
requires-python = ">=3.9"
dependencies = [
  "openpyxl>=3.1,<4",
  "numpy>=1.24,<3",
  "scikit-learn>=1.3,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
